turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:3: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.red)
        ^Source:5: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.yellow)
        ^Source:7: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.pink)
        ^