turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
	arcCircle ( 100,90,90)
	setCouleurBrosse(Color.red)
	arcCircle ( 100,90,90)
	setCouleurBrosse(Color.yellow)
	arcCircle ( 100,90,90)
	setCouleurBrosse(Color.pink)
	arcCircle ( 100,90,90)
	
}
def arcCircle(radius:Int, arc : Int, rays:Int) {
	for (i<-1 to rays) {
		avance(radius)
		recule(radius)
		droite(1)
}
}
